--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<h1>hello world 1</h1>
+
+    <nav id="navbar">
+      <ul>
+        <li><a href="#welcome-section">about</a></li>
+        <li><a href="#projects">projects</a></li>
+        <li><a href="#contacts">contacts</a></li>
+      </ul>
+    </nav>
+    <section id="welcome-section">
+      <h1>Well come</h1>
+    </section>
+    <section >these are some of projects
+      <div id="project-tile">
+        <a href="#">test</a>
+      </div>
+    </section>
+    <section id="contacts">
+      <h1>Lets work together</h1>
+      <section><span><a href="https://github.com/zemelatt/test" target="_blank">GITHUB</a></span></section>
+    </section>
     <!--
 
     Hello Camper!
@@ -21,6 +39,7 @@
     - The freeCodeCamp Team
 
     -->
+        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
 </html>
