--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
   <body>
 
     <nav id="navbar">
-      <ul>
+      <ul class="nav-list">
         <li><a href="#welcome-section">about</a></li>
         <li><a href="#projects">projects</a></li>
         <li><a href="#contacts">contacts</a></li>
       </ul>
     </nav>
-    <section id="welcome-section">
+    <section id="welcome-section" class="welcome-section">
       <h1>Well come</h1>
     </section>
-    <section >these are some of projects
-      <div id="project-tile">
-        <a href="#">test</a>
-      </div>
+    <section id="projects" class="projects-section">
+      <h2 class="projects-section-header">These are some of my projects</h2>
+          
+<div class="projects-grid"><a href="#">test</a></div>
     </section>
-    <section id="contacts">
+   
+ 
+   
+   <section id="contact" class="contact-section">
       <h1>Lets work together</h1>
       <section><span><a href="https://github.com/zemelatt/test" target="_blank">GITHUB</a></span></section>
     </section>
