--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul class="nav-list">
         <li><a href="#welcome-section">about</a></li>
         <li><a href="#projects">projects</a></li>
-        <li><a href="#contacts">contacts</a></li>
+        <li><a href="#contact">contacts</a></li>
       </ul>
     </nav>
     <section id="welcome-section" class="welcome-section">
@@ -30,6 +30,7 @@
       <h1>Lets work together</h1>
       <section><span><a href="https://github.com/zemelatt/test" target="_blank">GITHUB</a></span></section>
     </section>
+    <footer></footer>
     <!--
 
     Hello Camper!
